--- a/KLS_WEB/KLS_WEB/Views/Shared/_Layout.cshtml
+++ b/KLS_WEB/KLS_WEB/Views/Shared/_Layout.cshtml
@@ -18,7 +18,7 @@
     @RenderSection("Styles", required: false)
 </head>
 <body>
-    <div id="app">
+    <div id="app" translate="no">
         <!-- CONTENT -->
         <div>
             <!-- TOP BAR -->
