--- a/KLS_WEB/KLS_WEB/Views/Catalogs/Catalogs/GeografiaViews.cshtml
+++ b/KLS_WEB/KLS_WEB/Views/Catalogs/Catalogs/GeografiaViews.cshtml
@@ -7,14 +7,14 @@
 
         <a href="/Catalogs" class="catalog">
             <div class="content">
-                <div class="material-icons icon-red">arrow_back</div>
+                <div class="material-icons icon-red" translate="no">arrow_back</div>
                 <div class="name font-barlow">Regresar</div>
             </div>
         </a>
 
         <a href="/Catalogs/Geography/Regions" class="catalog">
             <div class="content">
-                <span class="material-icons">
+                <span class="material-icons" translate="no">
                     flag
                 </span>
                 <div class="name font-barlow">Regiones</div>
@@ -23,21 +23,21 @@
 
         <a href="/Catalogs/Geography/Country" class="catalog">
             <div class="content">
-                <div class="material-icons">local_shipping</div>
+                <div class="material-icons" translate="no">local_shipping</div>
                 <div class="name font-barlow">País</div>
             </div>
         </a>
 
         <a href="/Catalogs/Geography/State" class="catalog">
             <div class="content">
-                <div class="material-icons">map</div>
+                <div class="material-icons" translate="no">map</div>
                 <div class="name font-barlow">Estado</div>
             </div>
         </a>
 
         <a href="/Catalogs/Geography/City" class="catalog">
             <div class="content">
-                <div class="material-icons">location_city</div>
+                <div class="material-icons" translate="no">location_city</div>
                 <div class="name font-barlow">Ciudad</div>
             </div>
         </a>
